tests/ui/ferrocene/compiler-arguments/edition/edition_2018-tryinto-prelude.stderr
error[E0405]: cannot find trait `TryInto` in this scope
  --> $DIR/edition_2018-tryinto-prelude.rs:6:6
   |
LL | impl TryInto<String> for Foo {
   |      ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
LL + use std::convert::TryInto;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
